{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 62,
  "lineage": "efbb5180-cfda-10ea-b798-045a7d897c5e",
  "resources": [
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:security-group/sg-08043171e8d8183b3",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-08043171e8d8183b3",
            "ingress": [],
            "name": "testing20210526073723746100000002",
            "name_prefix": "testing",
            "owner_id": "378344169585",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "testing-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:security-group/sg-0b5e10f21d495efa1",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0b5e10f21d495efa1",
            "ingress": [],
            "name": "testing20210526073723653400000001",
            "name_prefix": "testing",
            "owner_id": "378344169585",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-eks_worker_sg",
              "kubernetes.io/cluster/testing": "owned"
            },
            "tags_all": {
              "Name": "testing-eks_worker_sg",
              "kubernetes.io/cluster/testing": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-800348741",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08043171e8d8183b3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-cluster.aws_security_group.cluster",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-4036294317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08043171e8d8183b3",
            "self": false,
            "source_security_group_id": "sg-0b5e10f21d495efa1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-4271953654",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b5e10f21d495efa1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-cluster.aws_security_group.workers",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-774881370",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b5e10f21d495efa1",
            "self": false,
            "source_security_group_id": "sg-08043171e8d8183b3",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3981844604",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b5e10f21d495efa1",
            "self": false,
            "source_security_group_id": "sg-08043171e8d8183b3",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-cluster.aws_security_group.cluster",
            "module.my-cluster.aws_security_group.workers",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2832389927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b5e10f21d495efa1",
            "self": false,
            "source_security_group_id": "sg-0b5e10f21d495efa1",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-cluster.aws_security_group.workers",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04a34898a8df7c49a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-214-92-110.compute-1.amazonaws.com",
            "public_ip": "18.214.92.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "app-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07b4a00fa1e21c53d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-206-239-176.compute-1.amazonaws.com",
            "public_ip": "52.206.239.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "app-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-us-east-1b"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f12f4cbadf9c02e1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-221-150-213.compute-1.amazonaws.com",
            "public_ip": "54.221.150.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "app-us-east-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-us-east-1c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:internet-gateway/igw-0905c892b05c16d08",
            "id": "igw-0905c892b05c16d08",
            "owner_id": "378344169585",
            "tags": {
              "Environment": "dev",
              "Name": "app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a34898a8df7c49a",
            "id": "nat-064f28fbccf0a27e5",
            "network_interface_id": "eni-0b785e98cbc43ebaf",
            "private_ip": "10.0.101.192",
            "public_ip": "18.214.92.110",
            "subnet_id": "subnet-0901866b864c865ed",
            "tags": {
              "Environment": "dev",
              "Name": "app-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b4a00fa1e21c53d",
            "id": "nat-0d03f1d20d31cf727",
            "network_interface_id": "eni-066707d16677688bb",
            "private_ip": "10.0.102.212",
            "public_ip": "52.206.239.176",
            "subnet_id": "subnet-0c6b6c355db5f33e6",
            "tags": {
              "Environment": "dev",
              "Name": "app-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f12f4cbadf9c02e1",
            "id": "nat-0e238501897979b83",
            "network_interface_id": "eni-05163017692305b40",
            "private_ip": "10.0.103.112",
            "public_ip": "54.221.150.213",
            "subnet_id": "subnet-03b5621cd629c3b0f",
            "tags": {
              "Environment": "dev",
              "Name": "app-us-east-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-us-east-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09737867672fae0571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-064f28fbccf0a27e5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09737867672fae057",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ecc891f38323462e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d03f1d20d31cf727",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ecc891f38323462e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0964024c1e9865a1e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e238501897979b83",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0964024c1e9865a1e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0905c892b05c16d08",
            "id": "r-rtb-01bfc5839aab2fc1a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01bfc5839aab2fc1a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:route-table/rtb-09737867672fae057",
            "id": "rtb-09737867672fae057",
            "owner_id": "378344169585",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "app-test-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-test-us-east-1a"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:route-table/rtb-0ecc891f38323462e",
            "id": "rtb-0ecc891f38323462e",
            "owner_id": "378344169585",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "app-test-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-test-us-east-1b"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:route-table/rtb-0964024c1e9865a1e",
            "id": "rtb-0964024c1e9865a1e",
            "owner_id": "378344169585",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "app-test-us-east-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-test-us-east-1c"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:route-table/rtb-01bfc5839aab2fc1a",
            "id": "rtb-01bfc5839aab2fc1a",
            "owner_id": "378344169585",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "app-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-public"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b55cb968d85b41bc",
            "route_table_id": "rtb-09737867672fae057",
            "subnet_id": "subnet-081189bcc5983e952"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075077a1c09cf9925",
            "route_table_id": "rtb-0ecc891f38323462e",
            "subnet_id": "subnet-09a2d652578d5dc10"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1012c6f8095fa56",
            "route_table_id": "rtb-0964024c1e9865a1e",
            "subnet_id": "subnet-0c0ad544f9e4482cb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fed9d5320cecda0d",
            "route_table_id": "rtb-01bfc5839aab2fc1a",
            "subnet_id": "subnet-0901866b864c865ed"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00027e1a1cfd98577",
            "route_table_id": "rtb-01bfc5839aab2fc1a",
            "subnet_id": "subnet-0c6b6c355db5f33e6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05503d35f206c4ff9",
            "route_table_id": "rtb-01bfc5839aab2fc1a",
            "subnet_id": "subnet-03b5621cd629c3b0f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:subnet/subnet-081189bcc5983e952",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-081189bcc5983e952",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378344169585",
            "tags": {
              "Environment": "dev",
              "Name": "app-test-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-test-us-east-1a"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:subnet/subnet-09a2d652578d5dc10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09a2d652578d5dc10",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378344169585",
            "tags": {
              "Environment": "dev",
              "Name": "app-test-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-test-us-east-1b"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:subnet/subnet-0c0ad544f9e4482cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c0ad544f9e4482cb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378344169585",
            "tags": {
              "Environment": "dev",
              "Name": "app-test-us-east-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-test-us-east-1c"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:subnet/subnet-0901866b864c865ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0901866b864c865ed",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378344169585",
            "tags": {
              "Environment": "dev",
              "Name": "app-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-public-us-east-1a"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:subnet/subnet-0c6b6c355db5f33e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0c6b6c355db5f33e6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378344169585",
            "tags": {
              "Environment": "dev",
              "Name": "app-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-public-us-east-1b"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:subnet/subnet-03b5621cd629c3b0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-03b5621cd629c3b0f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378344169585",
            "tags": {
              "Environment": "dev",
              "Name": "app-public-us-east-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-public-us-east-1c"
            },
            "vpc_id": "vpc-0ae3580bef7de2970"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378344169585:vpc/vpc-0ae3580bef7de2970",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0467b6cfc71828c0c",
            "default_route_table_id": "rtb-0f31db9ade5def455",
            "default_security_group_id": "sg-0a7be7f2a8a72716c",
            "dhcp_options_id": "dopt-07ff0f3d9d6361972",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ae3580bef7de2970",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f31db9ade5def455",
            "owner_id": "378344169585",
            "tags": {
              "Environment": "dev",
              "Name": "app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app"
            }
          }
        }
      ]
    }
  ]
}